Updated camera configuration

--- a/cam.conf
+++ b/cam.conf
@@ -1,9 +1,11 @@
-set brightness=30
-set contrast=0
-set saturation=200
-set "white balance temperature, auto"=False
-set "white balance temperature"=6500
-set sharpness=7
-set "backlight compensation"=0
-set "exposure, auto"="Manual Mode"
-set "exposure (absolute)"=1
+set Brightness=30
+set Contrast=10
+set Saturation=200
+set "White Balance Temperature, Auto"=False
+set "White Balance Temperature"=6400
+set Sharpness=50
+set "Backlight Compensation"=0
+set "Exposure, Auto"="Manual Mode"
+set "Exposure (Absolute)"=1
+set "Focus (absolute)"=0
+set "Focus, Auto"=False
