--- a/cam.conf
+++ b/cam.conf
@@ -1,11 +1,10 @@
-set Brightness=30
-set Contrast=10
-set Saturation=200
+set Brightness=0
+set Contrast=255
+set Saturation=0
 set "White Balance Temperature, Auto"=False
-set "White Balance Temperature"=6400
-set Sharpness=50
+set "White Balance Temperature"=10000
+set Sharpness=255
 set "Backlight Compensation"=0
 set "Exposure, Auto"="Manual Mode"
-set "Exposure (Absolute)"=10
-set "Focus (absolute)"=0
-set "Focus, Auto"=False
+set "Exposure (Absolute)"=119
+set "Exposure, Auto Priority"=False
